--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@ function myFunction() {
 <br>
 <p align="center" style=" font-family: sans-serif; font-size: 22px;">Hi,</p>
 <p align="center" style=" font-family: sans-serif; font-size: 20px;">We're <strong>THL</strong>. THL stands for Thomas, Henry, Lucas. Those are our names. We are a group of year 6 kids that hangout. We play video-games together, play sport together and code together. We live in Auckland, New Zealand and go to a school called <a href="https://www.google.com/maps/place/Stonefields+School/@-36.8887389,174.8386438,618m/data=!3m1!1e3!4m5!3m4!1s0x6d0d497425faf8f3:0x76a29fab0505d196!8m2!3d-36.8887413!4d174.8407954" target="_blank">'Stonefields School'</a>. At our school we do something called 'breakthrough'. It is basicly a school project. THL have done a couple of websites for our breakthrough. Go to 'Our Websites' to see some of our websites.</p>
+<footer>&copy; THL | All rights reserved.</footer>
 </body>
 </html>
