--- a/OurWebsites.html
+++ b/OurWebsites.html
@@ -95,5 +95,6 @@ function myFunction() {
 
 <a href="https://henry272.github.io/carshow/index.html" target="_blank"><img src="carshow.png" width="128" height="128" style="margin-left: 6px"></a>
 <span style="position: relative; top: -50px;">Car Show</span>
+<footer>&copy; THL | All rights reserved.</footer>
 </body>
 </html>
