--- a/AboutUs.html
+++ b/AboutUs.html
@@ -98,6 +98,6 @@ function myFunction() {
 <td>Lucas.</td><td>LucasGamer213</td><td>Great coder.</td><td>Fortnite.</td><td>Soccer.</td>
 </tr>
 </table>
-
+<footer>&copy; THL | All rights reserved.</footer>
 </body>
 </html>
