--- a/AboutUs.html
+++ b/AboutUs.html
@@ -66,7 +66,7 @@ body {
 }
 </style>
 <div class="topnav" id="myTopnav">
-  <a href="THL.html" style="font-family: verdana;">Home</a>
+  <a href="index.html" style="font-family: verdana;">Home</a>
   <a href="AboutUs.html" class="active" style="font-family: verdana;">About Us</a>
   <a href="OurWebsites.html" style="font-family: verdana;">Our Websites</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
